--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
     <application
-        android:name="lab.infoworks.starter.ui.app.StarterApp"
+        android:name=".ui.app.StarterApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -18,7 +18,7 @@
         android:theme="@style/AppTheme">
 
         <activity
-            android:name="lab.infoworks.starter.ui.activities.splash.SplashActivity"
+            android:name=".ui.activities.splash.SplashActivity"
             android:label="@string/title_activity_splash"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -29,7 +29,7 @@
             <meta-data android:name="landingPage" android:value="lab.infoworks.starter.ui.activities.app.AppActivity"/>
         </activity>
 
-        <activity android:name="lab.infoworks.starter.ui.activities.app.AppActivity"/>
+        <activity android:name=".ui.activities.app.AppActivity"/>
 
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
