--- a/libshared/build.gradle
+++ b/libshared/build.gradle
@@ -15,6 +15,7 @@ android {
     buildTypes {
         release {
             minifyEnabled false
+            useProguard true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
